# mgnify-pipelines-toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  merge_metadata_and_asv.py  pyproject.toml  pytest.ini  summary_motus_study_summary.tsv  summary_pfam_coverage-breadth_study_summary.tsv  summary_pfam_coverage-depth_study_summary.tsv  summary_pfam_read-count_study_summary.tsv  summary_silva-lsu_study_summary.tsv  summary_silva-ssu_study_summary.tsv  test_mgnify_api.py  test_motus_study_summary.tsv  test_pfam_coverage-breadth_study_summary.tsv  test_pfam_coverage-depth_study_summary.tsv  test_pfam_read-count_study_summary.tsv  test_silva-lsu_study_summary.tsv
.github/: CONTAINER_WORKFLOW_README.md
.github/workflows/: build-push-container.yml  create-container-pr.yml  lint-workflow.yml  pytest-workflow.yml  python-publish.yml
container/: Dockerfile  env.yaml
mgnify_pipelines_toolkit/analysis/amplicon/: amplicon_utils.py  are_there_primers.py  assess_inflection_point_mcp.py  assess_mcp_proportions.py  classify_var_regions.py  (+12 more)
mgnify_pipelines_toolkit/constants/: db_labels.py  mgnify2mimic2.py  ncrna.py  regex_ambiguous_bases.py  regex_fasta_header.py  tax_ranks.py  thresholds.py  webin_cli.py
mgnify_pipelines_toolkit/ena/: create_reads_manifest.py  webin_cli_handler.py  webincli_logback.xml 
mgnify_pipelines_toolkit/schemas/: amplicon-results-schema.py  base_schemas.py  dataframes.py  schemas.py
mgnify_pipelines_toolkit/utils/: directory_path_argparse.py  fasta_to_delimited.py  get_mpt_version.py  io.py  rename_contigs.py
(+498 files in other folders)
